--- a/web/html/xui/common_sider.html
+++ b/web/html/xui/common_sider.html
@@ -20,13 +20,17 @@
         <a-icon type="link"></a-icon>
         <span>{{ i18n "menu.link"}}</span>
     </template>
-    <a-menu-item key="https://github.com/mhsanaei/3x-ui/">
+    <a-menu-item key="https://github.com/UncleEmad/3x-ui/">
         <a-icon type="github"></a-icon>
         <span>Github</span>
     </a-menu-item>
-    <a-menu-item key="https://t.me/xxxuiforever">
+    <a-menu-item key="https://t.me/DUNKLERMAN">
         <a-icon type="usergroup-add"></a-icon>
         <span>Telegram</span>
+    </a-menu-item>
+    <a-menu-item key="https://instagram.com/emad.ghanavati">
+        <a-icon type="usergroup-add"></a-icon>
+        <span>Instagram</span>
     </a-menu-item>
 </a-sub-menu>
 <a-menu-item key="{{ .base_path }}logout">
