--- a/web/html/xui/common_sider.html
+++ b/web/html/xui/common_sider.html
@@ -24,7 +24,7 @@
         <a-icon type="github"></a-icon>
         <span>Github</span>
     </a-menu-item>
-    <a-menu-item key="https://t.me/xxxuiforever">
+    <a-menu-item key="https://t.me/Dunklerman">
         <a-icon type="usergroup-add"></a-icon>
         <span>Telegram</span>
     </a-menu-item>
